[gd_scene load_steps=6 format=3 uid="uid://d3eubwkod7ieh"]

[ext_resource type="Script" path="res://Scripts/RunningSceneManager.gd" id="1_rl7l7"]
[ext_resource type="PackedScene" uid="uid://bvnd4p8y1u2e3" path="res://Scenes/Player.tscn" id="3_arph0"]
[ext_resource type="Theme" uid="uid://fvbpn033xj0e" path="res://Themes/UI.tres" id="3_vdd47"]
[ext_resource type="Script" path="res://Scripts/Score.gd" id="5_02pf6"]
[ext_resource type="PackedScene" uid="uid://de556egsk6juq" path="res://Scenes/Game_Over_UI.tscn" id="6_pheyc"]

[node name="PlayerConfig" type="Node2D"]
process_mode = 3
position = Vector2(522, 356)
script = ExtResource("1_rl7l7")

[node name="Score" type="Label" parent="."]
process_mode = 1
offset_left = 418.0
offset_top = -335.0
offset_right = 611.0
offset_bottom = -278.0
theme = ExtResource("3_vdd47")
theme_override_font_sizes/font_size = 64
text = "Test"
horizontal_alignment = 2
script = ExtResource("5_02pf6")

[node name="Game_Over_Animation" parent="." instance=ExtResource("6_pheyc")]

[node name="CharacterBody2D" parent="." instance=ExtResource("3_arph0")]
position = Vector2(74, -54)
scale = Vector2(7, 7)
jump_velocity = -750.0

[connection signal="main_menu" from="Game_Over_Animation" to="." method="_on_game_over_animation_main_menu"]
[connection signal="restart_game" from="Game_Over_Animation" to="." method="_on_game_over_animation_restart_game"]
[connection signal="player_died" from="CharacterBody2D" to="Game_Over_Animation" method="_on_character_body_2d_player_died"]
